Fixing images not stretching

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,16 @@ ul.footer>li>a {
 }
 .item>img {
     width: 100%;
+    height: auto !important;
+    min-height: 100%;
+}
+@media (max-width: 800px) {
+  .item>img {
+    min-width: 100%;
+    width: auto !important;
     height: 100% !important;
+    max-width: 1000% !important;
+  }
 }
 /******** home ********/
 #home-body{
